update: 生成embedding时不再默认只生成前100条，而是直接生成所有文本的embedding

--- a/embedding/embedding_bert.ipynb
+++ b/embedding/embedding_bert.ipynb
@@ -51,8 +51,8 @@
       ],
       "source": [
         "with open('../data/文本.txt', 'r', encoding='utf-8') as file:\n",
-        "  # sentences = file.readlines()\n",
-        "  sentences = file.readlines()[:100] # ⚠️⚠️⚠️测试的时候可以只看前100条数据⚠️⚠️⚠️\n",
+        "  sentences = file.readlines()\n",
+        "  # sentences = file.readlines()[:100] # ⚠️⚠️⚠️测试的时候可以只看前100条数据⚠️⚠️⚠️\n",
         "print('文本条数: ', len(sentences))\n",
         "print('预览第一条: ', sentences[0])"
       ]
