--- a/embedding/embedding_sentence_transformer.ipynb
+++ b/embedding/embedding_sentence_transformer.ipynb
@@ -57,7 +57,8 @@
       "source": [
         "# step1 加载文件\n",
         "with open('../data/文本.txt', 'r', encoding='utf-8') as file:\n",
-        "  docs = file.readlines()[:100] # ⚠️⚠️⚠️测试的时候可以只看前100条数据⚠️⚠️⚠️\n",
+        "  docs = file.readlines()\n",
+        "  # docs = file.readlines()[:100] # ⚠️⚠️⚠️测试的时候可以只看前100条数据⚠️⚠️⚠️\n",
         "print('文本条数: ', len(docs))\n",
         "print('预览第一条: ', docs[0])"
       ]
